# programming-technology-Dell-Technologies

A1/: CMakeLists.txt  base-types.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
A3/: CMakeLists.txt  base-types.hpp  circle.cpp  circle.hpp  composite-shape.cpp  composite-shape.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp  test-circle.cpp  test-composite-shape.cpp  test-main.cpp  test-rectangle.cpp
B1/: CMakeLists.txt  details.hpp  main.cpp  policies.hpp  tasks.cpp  tasks.hpp  test-main.cpp  test-policies.cpp  test-task1.cpp  test-task2.cpp  test-task3.cpp  test-task4.cpp
B3/: CMakeLists.txt  factorial-container.cpp  factorial-container.hpp  main.cpp  parser.cpp  parser.hpp  phonebook-interface.cpp  phonebook-interface.hpp  phonebook.cpp  phonebook.hpp  tasks.hpp  test-factorial-container.cpp  test-main.cpp  test-parser.cpp  test-phonebook-interface.cpp  test-phonebook.cpp  test.txt
B4/: CMakeLists.txt  data-structure.cpp  data-structure.hpp  main.cpp  test-data-structure.cpp  test-main.cpp  text.txt
B5/: CMakeLists.txt  main.cpp  shape.cpp  shape.hpp  test-main.cpp  test-shape.cpp  text.txt
common/: utility.cpp  utility.hpp
